Fixed an issue with the styling of customer review elements that stuck out when there are long urls.

--- a/template/category/style.css
+++ b/template/category/style.css
@@ -43,9 +43,8 @@
 	font-size: smaller;
 }
 
-
 /* Customer Reviews */
-.amazon-product-container .amazon-customer-reviews .reviewText {
+.amazon-product-container .amazon-customer-reviews {
     word-break: break-all;
 }
 /* Rating stars */
